<resources>
    <string name="app_name">SnookerScoreBoard</string>
    <string name="welcome_message">Welcome to SnookerScoreBoard</string>
    <string name="welcome">Welcome</string>
    <string name="main_menu">Main menu</string>
    <string name="new_match">New match</string>
    <string name="title_activity_start_new_match">Start a new match</string>
    <string name="create_new_player">Create a new player</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="image_info">If logged in, tap image to take a new picture.</string>
    <string name="no_player_selected">No player selected</string>
    <string name="remember_me">Remember me</string>

    <!--    activity-start-new-game-->
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="select_player">Select player</string>
    <string name="max_number_of_frames">Best of ...</string>
    <string name="none_selected">None selected</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="explain_image">Tap image to choose one.</string>
    <string name="player_image">Player picture</string>
    <string name="select_player_1">Select player 1</string>
    <string name="select_player_2">Select player 2</string>
    <string name="must_choose_2_players">You must select 2 players.</string>

    <!--    search-player-fragment-->
    <string name="search">Search</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="enter_search_string">Enter a keyword...</string>

    <!--    activity-player-statistics-->
    <string name="player_statistics">Player statistics</string>

    <!--    activity-create-new-player-->
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">E-mail address</string>
    <string name="all_fields_required">All fields must be filled out.</string>
    <string name="player_already_exists">This player exists already.</string>
    <string name="create_player">Create player</string>
    <string name="firstname_required">First name is required.</string>
    <string name="lastname_required">Last name is required.</string>
    <string name="email_not_valid">That\'s not an email address.</string>
    <string name="email_required">E-mail address is required.</string>
    <string name="player_being_created">Player is being created.</string>
    <string name="player_created">Player created.</string>
    <string name="checking_player_id">Checking player ID.</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify password</string>
    <string name="password_too_short">Password must have at least 6 characters.</string>
    <string name="password_must_contain_letters_and_numbers">Password must include letters and numbers.</string>
    <string name="passwords_do_not_match">Password verification failed.</string>
    <string name="player_creation_failure">Sorry, player creation failed. Please check your internet connection.</string>
    <string name="player_signed_in">You have successfully signed in.</string>

    <!--    select-picture-dialog-fragment-->
    <string name="choose_color">Choose a color</string>
    <string-array name="ball_colors">
        <item>White</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Black</item>
    </string-array>

    <!--    match-activity-->
    <string name="list_of_recent_game_events">List of recent game events</string>
    <string name="end_of_turn">End of turn</string>
    <string name="foul">Foul</string>
    <string name="undo">Undo</string>
    <string name="maximum_score" translatable="false">147</string>
    <string name="maximum_frame_score" translatable="false">18 (35) 17</string>
    <string name="cue_ball">Cueball</string>
    <string name="red_ball">Red ball</string>
    <string name="yellow_ball">Yellow ball</string>
    <string name="green_ball">Green ball</string>
    <string name="brown_ball">Brown ball</string>
    <string name="blue_ball">Blue ball</string>
    <string name="pink_ball">Pink ball</string>
    <string name="black_ball">Black ball</string>
    <string name="points_remaining">points remaining</string>
    <string name="cannot_end_frame">Sorry, scores are equal. You cannot end the frame.</string>
    <string name="confirm_end_of_frame">Are you sure you want to end the frame?</string>
    <string name="match_won">Congratulations %s, you\'ve won!</string>
    <string name="players_loaded">Players loaded</string>

    <string name="end_frame">End frame</string>
    <string name="add_ball">Add ball</string>
    <string name="remove_ball">Remove ball</string>

</resources>
