<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MatchSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelFirstPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/player_1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/firstPlayerTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/firstPlayerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/tap_to_select"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="italic"
            android:onClick="searchPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelSecondPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/player_2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelFirstPlayer" />

        <TextView
            android:id="@+id/secondPlayerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/tap_to_select"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="italic"
            android:onClick="searchPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPlayerTextView" />

        <TextView
            android:id="@+id/maxNumberOfFramesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/max_number_of_frames"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/maxFrameNumberPicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maxFrameNumberPicker" />

        <NumberPicker
            android:id="@+id/maxFrameNumberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/secondPlayerTextView"
            app:layout_constraintTop_toBottomOf="@+id/secondPlayerTextView" />

        <Button
            android:id="@+id/startNewMatchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_activity_start_new_match"
            android:onClick="startMatch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/startNewMatchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxFrameNumberPicker"
            android:id="@+id/searchPlayerFrameLayout">

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>