<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewMatchActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelFirstPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/player_1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstPlayerTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="selectPlayer"
                android:padding="8dp"
                android:text="@string/tap_to_select"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/secondPlayerTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/selectFirstPlayerFrameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/firstPlayerTextView"
                app:layout_constraintStart_toStartOf="@+id/labelFirstPlayer"
                app:layout_constraintTop_toBottomOf="@+id/firstPlayerTextView" />

            <TextView
                android:id="@+id/labelSecondPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:text="@string/player_2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/secondPlayerTextView" />

            <TextView
                android:id="@+id/secondPlayerTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="selectPlayer"
                android:padding="8dp"
                android:text="@string/tap_to_select"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelSecondPlayer"
                app:layout_constraintTop_toBottomOf="@+id/selectFirstPlayerFrameLayout" />

            <FrameLayout
                android:id="@+id/selectSecondPlayerFrameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/secondPlayerTextView"
                app:layout_constraintStart_toStartOf="@+id/labelSecondPlayer"
                app:layout_constraintTop_toBottomOf="@+id/secondPlayerTextView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:text="@string/max_number_of_frames"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/maxFrameNumberPicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/maxFrameNumberPicker" />

            <NumberPicker
                android:id="@+id/maxFrameNumberPicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:theme="@style/AppTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/selectSecondPlayerFrameLayout" />

            <Button
                android:id="@+id/startNewMatchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_activity_start_new_match"
                android:onClick="startMatch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxFrameNumberPicker" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>