<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewMatchActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firstPlayerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="selectPlayer"
            android:padding="8dp"
            android:text="@string/select_player_1"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/selectFirstPlayerFrameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/firstPlayerTextView"
            app:layout_constraintTop_toBottomOf="@+id/firstPlayerTextView" />

        <TextView
            android:id="@+id/secondPlayerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="selectPlayer"
            android:padding="8dp"
            android:text="@string/select_player_2"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/firstPlayerTextView"
            app:layout_constraintTop_toBottomOf="@+id/selectFirstPlayerFrameLayout" />

        <FrameLayout
            android:id="@+id/selectSecondPlayerFrameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/secondPlayerTextView"
            app:layout_constraintTop_toBottomOf="@+id/secondPlayerTextView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="139dp"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/max_number_of_frames"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/maxFrameNumberPicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maxFrameNumberPicker" />

        <NumberPicker
            android:id="@+id/maxFrameNumberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/selectSecondPlayerFrameLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>